--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_32dp"
-            app:error="@{viewModel.tooLong}"
+            app:error="@{viewModel.error}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_question"
             app:viewModel="@{viewModel.phoneNumber}" />
