--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -47,7 +47,8 @@
             app:error="@{viewModel.error}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_question"
-            app:viewModel="@{viewModel}" />
+            app:onCloseKeyboard="@{() -> viewModel.closeKeyboardAndClearFocus()}"
+            app:phoneNumber="@{viewModel.phoneNumber}" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/Widget.Cashli.Button.Accent"
