--- a/app/src/main/res/layout/fr_validate_code.xml
+++ b/app/src/main/res/layout/fr_validate_code.xml
@@ -32,7 +32,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_20dp"
-            android:layout_marginTop="@dimen/dimen_40dp"
+            android:layout_marginTop="@dimen/dimen_44dp"
+            android:textAlignment="viewStart"
             android:textSize="@dimen/size_34sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
