--- a/app/src/main/res/values/strings-no-translation.xml
+++ b/app/src/main/res/values/strings-no-translation.xml
@@ -7,4 +7,11 @@
     <string name="language_english" translatable="false">I speak English</string>
     <string name="language_spanish" translatable="false">Yo hablo Español</string>
     <string name="language_creole" translatable="false">Mwen pale Kreyol</string>
+
+    <string name="terms_of_service_url" translatable="false">https://google.com</string>
+    <string name="privacy_policy_url" translatable="false">https://google.com</string>
+    <string name="dwolla_terms_of_service_url" translatable="false">https://google.com</string>
+    <string name="dwolla_privacy_policy_url" translatable="false">https://google.com</string>
+
+    <string name="generic_not_implemented_error" translatable="false">Action not implemented</string>
 </resources>
