--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -38,12 +38,15 @@
             visibility="@{viewModel.titleLogoId != null}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_8dp"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
             android:contentDescription="@null"
             app:drawableRes="@{viewModel.titleLogoId}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btn_back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             tools:src="@drawable/ic_logo_toolbar" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -60,12 +63,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginBottom="@dimen/dimen_16dp"
             android:textColor="@color/colorGrayDC"
             android:textSize="@dimen/size_16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/gl_title_end"
             app:layout_constraintStart_toStartOf="@id/gl_title_start"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             app:textRes="@{viewModel.titleId}" />
 
         <androidx.constraintlayout.widget.Guideline
