--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#E060D3</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhiteF5">#F0EDF5</color>
     <color name="colorGrayF4">#DFDFF4</color>
     <color name="colorGrayDC">#C2C2DC</color>
     <color name="colorGrayB6">#9F9FB6</color>
