--- a/app/src/main/res/layout/fr_create_profile.xml
+++ b/app/src/main/res/layout/fr_create_profile.xml
@@ -8,6 +8,8 @@
 
         <import type="com.wolfpackdigital.cashli.shared.utils.Constants" />
 
+        <import type="android.view.inputmethod.EditorInfo" />
+
         <variable
             name="viewModel"
             type="com.wolfpackdigital.cashli.presentation.auth.signup.createProfile.CreateProfileViewModel" />
@@ -63,14 +65,14 @@
                     android:layout_marginEnd="@dimen/dimen_24dp"
                     app:cliError="@{viewModel.firstNameError}"
                     app:cliHint="@{@string/et_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                     app:cliInputType="@{InputType.TYPE_CLASS_TEXT}"
                     app:cliLabel="@{@string/et_first_name}"
                     app:cliMaxChars="@{Constants.MAX_CHARS_50}"
                     app:cliText="@={viewModel.firstName}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                     android:id="@+id/et_last_name"
@@ -81,14 +83,14 @@
                     android:layout_marginEnd="@dimen/dimen_24dp"
                     app:cliError="@{viewModel.lastNameError}"
                     app:cliHint="@{@string/et_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                     app:cliInputType="@{InputType.TYPE_CLASS_TEXT}"
                     app:cliLabel="@{@string/et_last_name}"
                     app:cliMaxChars="@{Constants.MAX_CHARS_50}"
                     app:cliText="@={viewModel.lastName}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_first_name"
-                    app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+                    app:layout_constraintTop_toBottomOf="@id/et_first_name" />
 
                 <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                     android:id="@+id/et_street"
@@ -99,14 +101,14 @@
                     android:layout_marginEnd="@dimen/dimen_24dp"
                     app:cliError="@{viewModel.streetError}"
                     app:cliHint="@{@string/et_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                     app:cliInputType="@{InputType.TYPE_CLASS_TEXT}"
                     app:cliLabel="@{@string/et_street}"
                     app:cliMaxChars="@{Constants.MAX_CHARS_50}"
                     app:cliText="@={viewModel.street}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_last_name"
-                    app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+                    app:layout_constraintTop_toBottomOf="@id/et_last_name" />
 
                 <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                     android:id="@+id/et_zip_code"
@@ -116,14 +118,14 @@
                     android:layout_marginTop="@dimen/dimen_28dp"
                     app:cliError="@{viewModel.zipCodeError}"
                     app:cliHint="@{@string/et_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                     app:cliInputType="@{InputType.TYPE_CLASS_NUMBER}"
                     app:cliLabel="@{@string/et_zip_code}"
                     app:cliMaxChars="@{Constants.ZIP_CODE_LENGTH}"
                     app:cliText="@={viewModel.zipCode}"
                     app:layout_constraintEnd_toStartOf="@id/et_city_state"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_street"
-                    app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+                    app:layout_constraintTop_toBottomOf="@id/et_street" />
 
                 <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                     android:id="@+id/et_city_state"
@@ -134,13 +136,13 @@
                     android:layout_marginEnd="@dimen/dimen_24dp"
                     app:cliError="@{viewModel.cityAndStateError}"
                     app:cliHint="@{@string/city_state_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
                     app:cliInputType="@{InputType.TYPE_CLASS_TEXT}"
                     app:cliLabel="@{@string/et_city_state}"
                     app:cliText="@={viewModel.cityAndState}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/et_zip_code"
-                    app:layout_constraintTop_toBottomOf="@id/et_street"
-                    app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+                    app:layout_constraintTop_toBottomOf="@id/et_street" />
 
                 <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                     android:id="@+id/et_email"
@@ -152,6 +154,7 @@
                     android:layout_marginBottom="@dimen/dimen_64dp"
                     app:cliError="@{viewModel.emailError}"
                     app:cliHint="@{@string/et_hint}"
+                    app:cliImeOptions="@{EditorInfo.IME_ACTION_DONE}"
                     app:cliInputType="@{InputType.TYPE_CLASS_TEXT}"
                     app:cliLabel="@{@string/et_email}"
                     app:cliMaxChars="@{Constants.MAX_CHARS_50}"
