fixed the focus problem

--- a/app/src/main/res/layout/fr_create_profile.xml
+++ b/app/src/main/res/layout/fr_create_profile.xml
@@ -18,7 +18,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <include
             android:id="@+id/toolbar"
